remove multimidia section and merge it under index

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -13,6 +13,7 @@
 
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans">
 
   </head>
   <body>
@@ -26,14 +27,14 @@
     
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-2 col-12 d-none d-lg-block">
+            <!--<div class="col-md-2 col-12 d-none d-lg-block">
                 <img class="img-fluid rounded" id="icone" src="imagens/contato.png">
-              </div>
-              <div class="col-md-4" id="head">
+            </div>-->
+            <div class="col-md-4" id="head">
                 <h1>Google Glass</h1>
                 <h2 id="title">A revolução do Google está chegando</h2>
-              </div>
-            <div class="col-md-6 d-none d-lg-block">
+            </div>
+            <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/contato.png')">
                     <a class="nav-link" href="index.html">Home</a>
@@ -43,9 +44,6 @@
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/contato.png')">
                     <a class="nav-link" href="fotos.html">Fotos</a>
-                  </li>
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/contato.png')">
-                    <a class="nav-link" href="multimidia.html">Multimídia</a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/contato.png')">
                     <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
@@ -57,7 +55,6 @@
       <div class="row">
         <header class="col-12">
           <hgroup>
-            <h3>Fale Conosco > Contato</h3>
             <h1>Formulário de Contato</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
             <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 01/Maio/2013</h3>
