--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans">
 
   </head>
   <body>
@@ -30,14 +31,14 @@
   
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-2 col-12 d-none d-lg-block">
+            <!--<div class="col-md-2 col-12 d-none d-lg-block">
               <img class="img-fluid rounded" id="icone" src="imagens/glass-oculos-preto-peq.png">
-            </div>
+            </div>-->
             <div class="col-md-4 col-12" id="head">
               <h1>Google Glass</h1>
               <h2 id="title">A revolução do Google está chegando</h2>
             </div>
-            <div class="col-md-6 d-none d-lg-block">
+            <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
                     <a class="nav-link" href="index.html">Home</a>
@@ -47,9 +48,6 @@
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
                     <a class="nav-link" href="fotos.html">Fotos</a>
-                  </li>
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
-                    <a class="nav-link" href="multimidia.html">Multimídia</a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
                     <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
@@ -61,7 +59,6 @@
       <div class="row">
         <header class="col-12">
           <hgroup>
-            <h3>Tecnologia > Inovações</h3>
             <h1>Saiba tudo sobre o Google Glass</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
             <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
@@ -131,6 +128,9 @@
           <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
         
           <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
+          <video class="img-fluid rounded" controls="controls" poster="imagens/video-mini03.jpg">
+            <source src="media/getting-started.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
 
