--- a/fotos.html
+++ b/fotos.html
@@ -14,6 +14,7 @@
 
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans">
 
   </head>
   <body>
@@ -27,14 +28,14 @@
   
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
       <div class="row">
-          <div class="col-md-2 col-12 d-none d-lg-block">
+          <!--<div class="col-md-2 col-12 d-none d-lg-block">
               <img class="img-fluid rounded" id="icone" src="imagens/fotos.png">
-            </div>
-            <div class="col-md-4" id="head">
+          </div>-->
+          <div class="col-md-4" id="head">
               <h1>Google Glass</h1>
               <h2 id="title">A revolução do Google está chegando</h2>
-            </div>
-          <div class="col-md-6 d-none d-lg-block">
+          </div>
+          <div class="col-md-8 d-none d-lg-block">
               <ul class="nav justify-content-end">
                 <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/fotos.png')">
                   <a class="nav-link" href="index.html">Home</a>
@@ -44,9 +45,6 @@
                 </li>
                 <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/fotos.png')">
                   <a class="nav-link" href="fotos.html">Fotos</a>
-                </li>
-                <li class="nav-item" onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/fotos.png')">
-                  <a class="nav-link" href="multimidia.html">Multimídia</a>
                 </li>
                 <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/fotos.png')">
                   <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
@@ -58,7 +56,6 @@
       <div class="row">
         <header class="col-12">
           <hgroup>
-            <h3>Glass > Fotos</h3>
             <h1>Galeria de Imagens do Google Glass</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
             <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
