--- a/multimidia.html
+++ b/multimidia.html
@@ -13,6 +13,7 @@
 
     <!-- Font Family -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans">
 
   </head>
   <body>
@@ -26,14 +27,14 @@
     
     <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
         <div class="row">
-            <div class="col-md-2 col-12 d-none d-lg-block">
+            <!--<div class="col-md-2 col-12 d-none d-lg-block">
                 <img class="img-fluid rounded" id="icone" src="imagens/multimidia.png">
-              </div>
-              <div class="col-md-4" id="head">
+            </div>-->
+            <div class="col-md-4" id="head">
                 <h1>Google Glass</h1>
                 <h2 id="title">A revolução do Google está chegando</h2>
-              </div>
-            <div class="col-md-6 d-none d-lg-block">
+            </div>
+            <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/multimidia.png')">
                     <a class="nav-link" href="index.html">Home</a>
@@ -57,14 +58,12 @@
         <div class="row">
           <header class="col-12">
             <hgroup>
-              <h3>Glass > Multimídia</h3>
               <h1>Sons e Vídeos</h1>
               <h2 id="title">por Gustavo Guanabara</h2>
               <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
             </hgroup>
           </header>
         </div>
-
 
         <div class="row">
           <div class="col-md-12 col-12">
@@ -73,6 +72,7 @@
             </video>
           </div>
         </div>
+
       <footer class="col-12">
           <p class="footer">Copyright &copy; 2013 - by Gustavo Guanabara<br/>
           Facebook | Twitter</p>
