--- a/fotos.html
+++ b/fotos.html
@@ -58,11 +58,10 @@
           <hgroup>
             <h1>Galeria de Imagens do Google Glass</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
-            <h3 style="text-align: right; font-style: italic; font-size: 9pt">Atualizado em 23/Abril/2013</h3>
           </hgroup>
         </header>
       </div>
-      <div class="row">
+      <div class="row col-md-12">
         <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
 
         <ul id="album-fotos">
