--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
     <!-- Local JavaScript -->
     <script src="js/function.js"></script>
   
-    <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
-        <div class="row">
+    <div class="container-fluid pt-5 pr-0 pl-0 pb-0">
+        <div class="row" id="header">
             <!--<div class="col-md-2 col-12 d-none d-lg-block">
               <img class="img-fluid rounded" id="icone" src="imagens/glass-oculos-preto-peq.png">
             </div>-->
             <div class="col-md-4 col-12" id="head">
-              <h1>Google Glass</h1>
+              <h1><b>Google Glass</b></h1>
               <h2 id="title">A revolução do Google está chegando</h2>
             </div>
             <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html"><b>Home</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
-                    <a class="nav-link" href="specs.html">Especificações</a>
+                    <a class="nav-link" href="specs.html"><b>Especificações</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
-                    <a class="nav-link" href="fotos.html">Fotos</a>
+                    <a class="nav-link" href="fotos.html"><b>Fotos</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')">
-                    <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
+                    <a class="nav-link" href="fale-conosco.html"><b>Fale conosco</b></a>
                   </li>
                 </ul>
-            </div>
+            </div></b>
         </div>
  
-      <div class="row">
+      <div class="row" id="body">
         <header class="col-12">
           <hgroup>
-            <h1>Saiba tudo sobre o Google Glass</h1>
+            <h1 id="title">Saiba tudo sobre o Google Glass</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
           </hgroup>
         </header>
       </div>
-      <div class="row">
+      <div class="row" id="body">
         <div class="col-12 col-md-8">
           <h2>O que é</h2>
           <p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
