--- a/specs.html
+++ b/specs.html
@@ -25,42 +25,42 @@
     <!-- Local JavaScript -->
     <script src="js/function.js"></script>
   
-    <div class="container-fluid pt-5 pr-5 pl-5 pb-0">
-        <div class="row">
+    <div class="container-fluid pt-5 pr-0 pl-0 pb-0">
+        <div class="row" id="header">
             <!--<div class="col-md-2 col-12 d-none d-lg-block">
                 <img class="img-fluid rounded" id="icone" src="imagens/especificacoes.png">
             </div>-->
             <div class="col-md-4" id="head">
-                <h1>Google Glass</h1>
+                <h1><b>Google Glass</b></h1>
                 <h2 id="title">A revolução do Google está chegando</h2>
             </div>
             <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
                   <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html"><b>Home</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
-                    <a class="nav-link" href="specs.html">Especificações</a>
+                    <a class="nav-link" href="specs.html"><b>Especificações</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
-                    <a class="nav-link" href="fotos.html">Fotos</a>
+                    <a class="nav-link" href="fotos.html"><b>Fotos</b></a>
                   </li>
                   <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/especificacoes.png')">
-                    <a class="nav-link" href="fale-conosco.html">Fale conosco</a>
+                    <a class="nav-link" href="fale-conosco.html"><b>Fale conosco</b></a>
                   </li>
                 </ul>
             </div>
         </div>
  
-      <div class="row">
+      <div class="row" id="body">
         <header class="col-12">
           <hgroup>
-            <h1>Raio-X no Google Glass</h1>
+            <h1 id="title">Raio-X no Google Glass</h1>
             <h2 id="title">por Gustavo Guanabara</h2>
           </hgroup>
         </header>
       </div>
-      <div class="row">
+      <div class="row" id="body">
           <div class="col-md-6">
             <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
             <img class="img-fluid rounded" src="imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
