--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -36,16 +36,16 @@
             </div>
             <div class="col-md-8 d-none d-lg-block">
                 <ul class="nav justify-content-end">
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/contato.png')">
+                  <li class="nav-item">
                     <a class="nav-link" href="index.html"><b>Home</b></a>
                   </li>
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/contato.png')">
+                  <li class="nav-item">
                     <a class="nav-link" href="specs.html"><b>Especificações</b></a>
                   </li>
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/contato.png')">
+                  <li class="nav-item">
                     <a class="nav-link" href="fotos.html"><b>Fotos</b></a>
                   </li>
-                  <li class="nav-item" onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/contato.png')">
+                  <li class="nav-item">
                     <a class="nav-link" href="fale-conosco.html"><b>Fale conosco</b></a>
                   </li>
                 </ul>
