--- a/index.html
+++ b/index.html
@@ -29,31 +29,39 @@
     <!-- Local JavaScript -->
     <script src="js/function.js"></script>
   
-    <div class="container-fluid pt-5 pr-0 pl-0 pb-0">
-        <div class="row" id="header">
-            <div class="col-md-4 col-12" id="head">
-              <h1><b>Google Glass</b></h1>
-              <h2 id="title">A revolução do Google está chegando</h2>
-            </div>
-            <div class="col-md-8 d-none d-lg-block">
-                <ul class="nav justify-content-end navbar-expand-lg navbar-light">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html"><b>Home</b></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="specs.html"><b>Especificações</b></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="fotos.html"><b>Fotos</b></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="fale-conosco.html"><b>Fale conosco</b></a>
-                  </li>
-                </ul>
-            </div></b>
+    <div class="container-fluid">
+      <nav class="navbar-expand-lg navbar-light fixed-top bg-light" id="header">
+        <div class="row">
+          <div class="col-md-4 col-12">
+            <button class="navbar-toggler" id="nav-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a id="header" class="navbar-brand" href="index.html">              
+              <h1 class="title"><b>Google Glass</b></h1>
+              <h2 class="title" id="title">A revolução do Google está chegando</h2>
+            </a>
+          </div>
+          <div class="col-md-8 col-12 collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-aut">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html"><b>Home</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="specs.html"><b>Especificações</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="fotos.html"><b>Fotos</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="fale-conosco.html"><b>Fale conosco</b></a>
+              </li>
+            </ul>
+          </div>
         </div>
- 
-      <div class="row" id="body">
+      </nav>
+    </div>
+    <div class="container-fluid"  id="body">
+      <div class="row" id="body-title">
         <header class="col-12">
           <hgroup>
             <h1 id="title">Saiba tudo sobre o Google Glass</h1>
@@ -61,7 +69,7 @@
           </hgroup>
         </header>
       </div>
-      <div class="row" id="body">
+      <div class="row">
         <div class="col-12 col-md-8">
           <h2>O que é</h2>
           <p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
